Improving recipes list design

--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -1,5 +1,15 @@
 <resources>
-    <string name="app_name">BakingApp</string>
+    <string name="app_name">Baking App</string>
     <string name="image_recipe_description">Recipe</string>
     <string name="image_servings_description">Servings</string>
+
+    <!-- Activity Titles -->
+    <string name="activity_recipes">Recipes List</string>
+    <string name="activity_recipe">Recipe</string>
+
+    <!-- Level labels -->
+    <string name="level_default">--</string>
+    <string name="level_easy">EASY</string>
+    <string name="level_medium">MEDIUM</string>
+    <string name="level_hard">HARD</string>
 </resources>
