--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="level_easy">EASY</string>
     <string name="level_medium">MEDIUM</string>
     <string name="level_hard">HARD</string>
+    <string name="recipe_not_found">Recipe Not Found</string>
 </resources>
