--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="level_medium">MEDIUM</string>
     <string name="level_hard">HARD</string>
     <string name="recipe_not_found">Recipe Not Found</string>
+    <string name="step_not_found">step_not_found</string>
 </resources>
