--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="level_hard">HARD</string>
     <string name="recipe_not_found">Recipe Not Found</string>
     <string name="step_not_found">step_not_found</string>
+
+    <!-- Widget -->
+    <string name="widget_description"> Recipe Widget </string>
+
 </resources>
