Integrating widget, content provider and sqlite db. Ålso, adding a button to recipe fragment allowing to user select a recipe to show in the widget.

--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -17,5 +17,7 @@
 
     <!-- Widget -->
     <string name="widget_description"> Recipe Widget </string>
+    <string name="wiget_recipe_not_found">Recipe not found</string>
+    <string name="add_to_widget">Add to Widget</string>
 
 </resources>
