Adding to recipe FAB button a snack bar message when user press it

--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="wiget_recipe_not_found">Recipe not found</string>
     <string name="add_to_widget">Add to Widget</string>
 
+    <!-- Messages -->
+    <string name="msg_added_to_widget">Recipe Added to Home Screen Widget Successfully</string>
 </resources>
