--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="activity_recipes">Recipes List</string>
     <string name="activity_recipe">Recipe</string>
 
-    <!-- Level labels -->
+    <!-- Tiles & labels -->
     <string name="level_default">--</string>
     <string name="level_easy">EASY</string>
     <string name="level_medium">MEDIUM</string>
@@ -16,6 +16,7 @@
     <string name="step_not_found">step_not_found</string>
     <string name="title_ingredients">Ingredients</string>
     <string name="title_steps">Steps</string>
+    <string name="title_step">Step</string>
 
     <!-- Widget -->
     <string name="widget_description"> Recipe Widget </string>
